--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "fm-password-generator-app",
-  "version": "1.0.0",
-  "description": "![Design preview for the Password generator app coding challenge](./preview.jpg)",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "fm-password-generator-app",
+    "version": "1.0.0",
+    "description": "![Design preview for the Password generator app coding challenge](./preview.jpg)",
+    "main": "index.js",
+    "scripts": {
+        "dev": "lite-server --baseDir='src'",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "lite-server": "^2.6.1"
+    }
 }
